--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
   text-align: center;
+  box-sizing: border-box;
+  background-color: #d5ffc6;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  font-size:50px;
 }
 
 .App-logo {
@@ -14,7 +19,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #d5ffc6;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +27,48 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.Top-header {
+  background-color: #3b773a;
+  height: 50px;
+  position: absolute;
+  top: 0;
+  width: 100% ;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 40px;
+  color: white;
+  font-family: "VT323";
+}
+
+.Bottom-header {
+  background-color: #3b773a;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+  width: 100% ;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+  font-family: "VT323";
+}
+
+.Login-button {
+  font-family: "VT323";
+  color: #119f16;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: 20px;
+  background_color: #d1e0cc;
+}
+
+.Error {
+    color: red;
 }
 
 .App-link {
