--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,8 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
+  font-family: "VT323";
 }
 
 .Top-header {
@@ -64,11 +65,27 @@
   align-items: center;
   flex-direction: column;
   font-size: 20px;
-  background_color: #d1e0cc;
+  background-color: #d1e0cc;
+}
+
+.Option-button {
+  font-family: "VT323";
+  color: black;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-size: 30px;
+  background-color: #c4c4c4;
+  width: 400px;
+  margin: 20px;
 }
 
 .Error {
     color: red;
+    height: 20px;
+    width: 500px;
+    font-size: 20px;
+    font-family: "VT323";
 }
 
 .App-link {
