--- a/src/App.css
+++ b/src/App.css
@@ -81,15 +81,28 @@
 }
 
 .Error {
-    color: red;
-    height: 20px;
-    width: 500px;
-    font-size: 20px;
-    font-family: "VT323";
+  color: red;
+  height: 20px;
+  width: 500px;
+  font-size: 20px;
+  font-family: "VT323";
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.Info-header {
+  background-color: #3b773a;
+  position: absolute;
+  top: 50px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+  font-family: "VT323";
 }
 
 @keyframes App-logo-spin {
